--- a/AttendenceSystem/Pages/Shared/_Layout.cshtml
+++ b/AttendenceSystem/Pages/Shared/_Layout.cshtml
@@ -25,6 +25,18 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/RequestLeave">Request Leave</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ViewLeaves">View Leaves</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Employees">Employees</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ManageLeavePolicy">Manage Leave Policy</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
