--- a/AttendenceSystem/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/AttendenceSystem/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,5 @@
-﻿@inject SignInManager<IdentityUser> SignInManager
+﻿@using AttendenceSystem.Data.Models
+@inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
 }
