--- a/AttendenceSystem/Pages/Employees.cshtml
+++ b/AttendenceSystem/Pages/Employees.cshtml
@@ -12,14 +12,20 @@
     <thead>
         <tr>
             <th>Name</th>
+            <th>Email</th>
+            <th>Phone</th>
+            <th>Department</th>
             <th>Total Leaves (This Year)</th>
         </tr>
     </thead>
     <tbody>
-    @foreach (var emp in Model.Employees)
+    @foreach (var emp in Model.EmployeeList)
     {
         <tr>
             <td>@emp.Name</td>
+            <td>@emp.Email</td>
+            <td>@emp.Phone</td>
+            <td>@emp.Department</td>
             <td>@emp.TotalLeaves</td>
         </tr>
     }
