--- a/AttendenceSystem/Pages/Shared/_Layout.cshtml
+++ b/AttendenceSystem/Pages/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/ViewLeaves">My Leaves</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-page="/Dashboards/MonthlyLeaveSchedule">Monthly Schedule</a>
+                            </li>
 
                             @if (User.IsInRole("Supervisor") || User.IsInRole("Admin"))
                             {
